# leashd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
.leashd/: test.yaml
docs/: agents.md  architecture.md  autonomous-mode.md  autonomous-setup-guide.md  browser-testing.md  cli.md  configuration.md  connectors.md  engine.md  events.md  index.md  plugins.md  storage.md  webui.md
leashd/: __init__.py  app.py  cc_plugins.py  cli.py  cli_run.py  config_store.py  daemon.py  exceptions.py  main.py  setup.py  skills.py  tunnel.py
leashd/agents/: base.py  capabilities.py  claude_code.py  registry.py  types.py
leashd/agents/runtimes/: claude_cli.py  claude_code.py  codex.py  subprocess_agent.py
leashd/connectors/: base.py  multi.py  telegram.py  web.py
leashd/core/: config.py  engine.py  events.py  interactions.py  message_logger.py  queue.py  runtime_settings.py  session.py  task.py  task_memory.py  task_profile.py  test_output.py  workspace.py
leashd/core/safety/: analyzer.py  approvals.py  audit.py  gatekeeper.py  policy.py  sandbox.py
leashd/data/webui/: app.js  index.html  manifest.json  service-worker.js  style.css
leashd/git/: handler.py  service.py
leashd/middleware/: base.py
leashd/plugins/: registry.py
leashd/plugins/builtin/: _cli_evaluator.py  _conductor.py  _task_v3_prompts.py  agentic_orchestrator.py  auto_approver.py  auto_plan_reviewer.py  autonomous_loop.py  browser_tools.py  task_orchestrator.py  task_v3.py  test_config_loader.py  test_runner.py  web_agent.py  web_checkpoint.py  web_interaction_logger.py  workflow.py
leashd/plugins/builtin/playbooks/: linkedin_comment.yaml
leashd/policies/: autonomous.yaml  default.yaml  permissive.yaml  strict.yaml
leashd/storage/: sqlite.py
leashd/web/: app.py  models.py  push.py  routes.py  ws_handler.py
releases/: new.md
tests/: conftest.py  test_app.py  test_autonomous_setup.py  test_cc_plugins.py  test_cli.py  test_cli_run.py  test_config_store.py  test_daemon.py  test_main.py  test_reconnect_state.py  test_setup.py  test_skills.py  test_tunnel.py
tests/agents/: test_agent_registry.py  test_claude_agent.py  test_claude_cli.py  test_codex.py  test_subprocess_agent.py  test_types.py
tests/connectors/: test_base.py  test_telegram.py  test_web.py
tests/core/: test_config.py  test_events.py  test_interactions.py  test_message_logger.py  test_queue.py  test_runtime_settings.py  test_session_phase.py  test_streaming.py  test_task.py  test_task_memory.py  test_task_profile.py  test_test_output.py  test_workspace.py
tests/core/engine/: conftest.py  test_clear_race.py  test_commands.py  test_config_reload.py  test_events_lifecycle.py  test_interaction_routing.py  test_message_handling.py  test_plan_mode.py  test_plugin_command.py  test_queuing.py  test_safety.py  test_sessions.py  test_stream_responder.py  test_workspace_commands.py
tests/core/safety/: test_analyzer.py  test_approval_events.py  test_approvals.py  test_audit_approver_type.py  test_gatekeeper.py  test_policy.py  test_policy_compound.py  test_safety_pipeline.py  test_sandbox.py
tests/git/: test_formatter.py  test_handler.py  test_models.py  test_service.py
tests/middleware/: test_middleware.py
tests/plugins/: test_registry.py
tests/plugins/builtin/: conftest.py  test_agentic_orchestrator.py  test_audit_plugin.py  test_auto_approver.py  test_auto_plan_reviewer.py  test_autonomous_loop.py  test_browser_tools.py  test_cli_evaluator.py  test_conductor.py  test_merge_resolver.py  test_task_orchestrator.py  test_task_v3.py  test_test_config_loader.py  test_test_runner.py  test_web_agent.py  test_web_checkpoint.py  test_web_interaction_logger.py  test_workflow.py
tests/storage/: test_storage.py
tests/web/: test_push.py  test_routes.py
